# container-risk-factsheet

./: .gitignore  CITATION.cff  CONTRIBUTORS.md  README.md  docker-compose.yml  pyproject.toml
.github/skills/add-api-endpoint/: SKILL.md
.github/workflows/: ci.yml
api/: __init__.py  api_server.py  config.py  factsheet_service.py  logger.py  utils.py  versioning.py
api/swagger_specs/: extract_traits.yml  generate_factsheet.yml  generate_treatment_report.yml  health.yml  version.yml
backend/: __init__.py  backend_server.py  logger.py
config/docker/: Dockerfile.api  Dockerfile.backend
data/: trait_definitions.yaml
data/schemas/: factsheet_extraction_schema.json
data/tra_model/query_results/15_full_csro/: risk_export.jsonld  rule_export.jsonld
docs/explanation/: how-factsheets-work.md
docs/how-to-guides/: analyse-dockerfiles.md  override-assumptions.md
docs/reference/: cli.md  rest-api.md
docs/tutorials/: getting-started.md
example/: analyzer.dockerfile  assumptions.conf  docker-compose.yml  factsheet.json
factsheet/: __init__.py  assumption_evaluator.py  cli.py  compose_normalizer.py  dockerfile_analyzer.py  factsheet_generator.py  risk_model.py  scenario_matcher.py  trait_extractor.py  treatment_report.py
tests/: test_api_utils.py  test_assumption_evaluator.py  test_cli_helpers.py  test_compose_normalizer.py  test_dockerfile_analyzer.py  test_trait_extractor.py  test_treatment_report.py
